@@ -89,7 +89,7 @@ public class FileSysContributor extends AbstractContributor implements Prototype
 
 		if (this.getGraphPath() == null && messagingTarget instanceof GraphMessagingTarget) {
 
-			String relativeGraphPath = URLEncoder.encode(GraphUtil.getOwnerXDIAddress(((GraphMessagingTarget) messagingTarget).getGraph()).toString(), StandardCharsets.UTF_8);
+			String relativeGraphPath = URLEncoder.encode(GraphUtil.getOwnerXDIAddress(((GraphMessagingTarget) messagingTarget).getGraph()).toString(), "UTF-8");
 			this.setGraphPath(this.getBasePath() + relativeGraphPath);
 		}
 
